[package]
name = "s3walk"
version = "0.1.0"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_credential = "0.45"
structopt = "0.3"
failure = "0.1"
chrono = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[dependencies.rusoto_core]
version = "0.45"
default-features = false
features = [ "rustls" ]

[dependencies.rusoto_s3]
version = "0.43"
default-features = false
features = [ "rustls" ]
